Fix app urls.py for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,8 @@
 services:
   - type: web
-    name: smart-expense-tracker
+    name: smart-tracker
     env: python
     region: india
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
+    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
     startCommand: gunicorn smart_tracker.wsgi:application
-    envVars:
-      - key: DJANGO_SETTINGS_MODULE
-        value: smart_tracker.settings
-      - key: PYTHON_VERSION
-        value: "3.11.9"
